--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -5,9 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ReactPHP</title>
+    <title>Rest Framework - PHP Framework for ReactPHP library</title>
 </head>
 <body>
-    {{ message | default('Hello World') }}
+    Framework version {{ frameworkVersion }}
 </body>
 </html>
